@@ -21,11 +21,6 @@
 
 #include "IndicatorPlugin.h"
 
-#define cdlFillOpenGTClose 0
-#define cdlFillOpenLTClose 1
-#define cdlFillBoth        2
-#define cdlFillNever       3
-
 class BARS : public IndicatorPlugin
 {
   public:
@@ -54,14 +49,6 @@ class BARS : public IndicatorPlugin
     QString method;
     QStringList methodList;
     QString dbPath;
-
-    QColor candleUpColor; /****************************/
-    QColor candleDownColor; /****************************/
-    QStringList candleFillList; /**********************/
-    int candleFillOption; /**********************/
-    QString candleUpColorLabel;   /************************/
-    QString candleDownColorLabel; /************************/
-    QString candleFillLabel;      /************************/
 
     QColor maColor;
     QColor maColor2;
